@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.460 2003-08-08 15:10:02 castaglia Exp $
+$Id: NEWS,v 1.461 2003-08-11 06:07:53 castaglia Exp $
 
 CVS
 ---------------------------------
@@ -52,6 +52,7 @@ CVS
 - Bug 1711 - IPv6 support.  Support for EPRT and EPSV added.  To enable IPv6
   support, use the new --enable-ipv6 configure option.
 - Bug 2130 - %y in DisplayLogin is not updated correctly.
+- Bug 2137 - NLST and IgnoreHidden causes segfault.
 
 1.2.9rc1 - Released 15-May-2003
 ---------------------------------
